# scalpels

./: .gitreview  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
ceilometer/: mysqllive  mysqllive.sh
devstack/: plugin.sh  settings
doc/: Makefile
doc/source/: conf.py  index.rst
scalpels/agents/: base.py  server.py
scalpels/cli/: api.py  rpcapi.py  shell.py
scalpels/cli/actions/: agent.py  load.py  report.py  result.py  setup.py  start.py  stop.py  tracer.py
scalpels/client/: api.py  rpcapi.py  shell.py  utils.py
scalpels/client/actions/: load.py  report.py  result.py  setup.py  start.py  stop.py  tracer.py
scalpels/cmd/: agent.py  manage.py  tracer.py
scalpels/db/: api.py
scalpels/db/sqlalchemy/: __init__.py  api.py  models.py
scalpels/rpc/: client.py  server.py
scalpels/templates/: line-chart.mako  multi-line-chart.mako
scripts/: agent.py  device-input-traffic.sh  io-count.stp  model-save.stp  mysql-live.sh  oslo-lock.stap  oslo-lock.stp  ovs_port_statistics.sh  port-input-traffic.sh  rbt-trace.py  rpc-count.stp  sqla-exec.stp
tests/ci/: pre-test-hook.sh  pyfunc.stp  scalpels-ci.sh  test-func.py
tests/unit/: test_utils.py
tools/: agents.json  fake_pep8.sh  init_scalpels.sh
