[metadata]
name = scalpels
summary = OpenStack digging system
description-file = README.md
author = Kun Huang
author-email = academicgareth@gmail.com
maintainer = Kun Huang
maintainer-email = academicgareth@gmail.com
home-page = https://github.com/pyKun/scalpels
license = apache v2.0
classifier =
    Topic :: Utilities
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages = scalpels

[entry_points]
console_scripts =
    sca = scalpels.cli.shell:main
